fixed layout issue footer

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -11,89 +11,93 @@ sans-serif;
     @media screen and (max-width: 756px) {
         text-align: center;
     }
-    .col{
-        @media screen and (min-width:800px){
+    .col {
+        @media screen and (max-width: 600px) {
+            width: 100%;
+        }
+        @media screen and (min-width: 901px) {
             width: 25%;
         }
-        width:100%;
+        @media screen and (max-width:900px)and (min-width:601px) {
+            width: 50%;
+        }
     }
-  .logo-col { 
-      
-    .social-row {
-        margin: 20px auto;
-        @media screen and (min-width: 756px) {
-            margin-top: 25%;
-        }
-        i {
-            margin-right: 10px;
-            cursor: pointer;
-            color: white;
-            font-size: 20px !important;
-        }
-        .faceb {
-            &:hover {
-                background: -webkit-linear-gradient(45deg, (#6028F1), (#63AFDB));
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+    .logo-col {
+        .social-row {
+            margin: 20px auto;
+            @media screen and (min-width: 756px) {
+                margin-top: 25%;
+            }
+            i {
+                margin-right: 10px;
+                cursor: pointer;
+                color: white;
+                font-size: 20px !important;
+            }
+            .faceb {
+                &:hover {
+                    background: -webkit-linear-gradient(45deg, (#6028F1), (#63AFDB));
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+            .yout {
+                &:hover {
+                    background: -webkit-linear-gradient(45deg, (#D3205A), #FF5A5A);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+            .twitt {
+                &:hover {
+                    background: -webkit-linear-gradient(45deg, (#27718A), (#65FFEB));
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+            .pint {
+                &:hover {
+                    background: -webkit-linear-gradient(45deg, (#DE3838), #F6C683);
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+            .instag {
+                &:hover {
+                    background: -webkit-linear-gradient(45deg, (#5A77FF), #BC7198, (#FFC593));
+                    -webkit-background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                }
             }
         }
-        .yout {
-            &:hover {
-                background: -webkit-linear-gradient(45deg, (#D3205A), #FF5A5A);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-        }
-        .twitt {
-            &:hover {
-                background: -webkit-linear-gradient(45deg, (#27718A), (#65FFEB));
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-        }
-        .pint {
-            &:hover {
-                background: -webkit-linear-gradient(45deg, (#DE3838), #F6C683);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-        }
-        .instag {
-            &:hover {
-                background: -webkit-linear-gradient(45deg, (#5A77FF), #BC7198, (#FFC593));
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-        }
-    }}
+    }
     .footer-links {
         @media screen and (max-width: 756px) {
             margin-bottom: 45px;
         }
         .single-link {
             text-decoration: none !important;
-         line-height: 2.2rem;
-                text-decoration: none !important;
-                color: white;
-                font-size: 18px;
-                margin: 12px auto !important;
-            
+            line-height: 2.2rem;
+            text-decoration: none !important;
+            color: white;
+            font-size: 18px;
+            margin: 12px auto !important;
         }
     }
     .copy-col {
-        .btn{
+        .btn {
             width: 100%;
             height: 50px;
             background-color: transparent;
-            border:none;
+            border: none;
             font-size: 15px;
             color: $pureWhite;
             text-align: start;
             text-transform: uppercase;
-            &.white{
-                color:$pureWhite !important;
+            &.white {
+                color: $pureWhite !important;
             }
-            &:hover{
+            &:hover {
                 transition: all 0.3s ease;
                 cursor: pointer;
             }
